# facemash-backend

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build-image.sh
.github/workflows/: ci.yaml
src/: main.rs
src/algorithm/: elo_rating.rs  k_factor.rs  mod.rs
src/config/: mod.rs
src/controller/: duplicate.rs  face_info_controller.rs  file_controller.rs  mod.rs  upload_files.rs
src/dao/: face_info.rs  face_info_dao.rs  file_resource_dao.rs  mod.rs  rating_log_dao.rs
src/entity/: face_info.rs  file_resource.rs  mod.rs  rating_log.rs
src/logger/: mod.rs
src/resource/: id_generator.rs  mod.rs  mongo.rs
src/service/: face_info_service.rs  file_resource_service.rs  file_service.rs  mod.rs
src/utils/: md5.rs
