[package]
name = "facemash-backend"
version = "0.1.0"
edition = "2021"
description = "The backend for Facemash"
authors = ["JasonkayZK jasonkayzk@gmail.com"]
repository = "https://github.com/FacemashHub/facemash-backend"
homepage = "https://github.com/FacemashHub/facemash-backend"
url = "https://github.com/FacemashHub/facemash-backend"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
