[package]
name = "facemash-backend"
version = "0.1.0"
edition = "2021"
description = "The backend for Facemash"
authors = ["JasonkayZK jasonkayzk@gmail.com"]
repository = "https://github.com/FacemashHub/facemash-backend"
homepage = "https://github.com/FacemashHub/facemash-backend"
url = "https://github.com/FacemashHub/facemash-backend"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4"
actix-web = "4"

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
mongodb = "2"
lazy_static = "1.4.0"
async_once = "0.2.6"
dotenv = "0.15"
